[gd_scene load_steps=4 format=3 uid="uid://c88m7i55cla1a"]

[ext_resource type="Script" path="res://scenes/ui/player_glass_card.gd" id="1_h8p0l"]
[ext_resource type="Texture2D" uid="uid://g8acpvp45ki8" path="res://assets/glasses/deal_with_it.png" id="2_nvcyj"]
[ext_resource type="PackedScene" uid="uid://t0ypltxpbru7" path="res://scenes/ui/sound_button.tscn" id="3_vet31"]

[node name="PlayerClassCard" type="PanelContainer" groups=["meta_upgrade_card"]]
custom_minimum_size = Vector2(180, 0)
pivot_offset = Vector2(75, 75)
script = ExtResource("1_h8p0l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 14
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Texture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_nvcyj")
expand_mode = 5
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Write some description here"
autowrap_mode = 2

[node name="SelectButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_vet31")]
unique_name_in_owner = true
layout_mode = 2
text = "Select"
